gcc/testsuite/algol68/compile/error-nest-2.a68
begin int foo =
         nest C
              200; { dg-error "denotation" }
      int bar =
         nest
              3.14; { dg-error "denotation" }
      skip
end
